Implementere writeAvregningsreturFileService